# cognitive_VAK_Dev

./: README.md
Studymate/: ai_assistant_remote.py  main.py  pdf_processor.py  pyproject.toml  replit.md  test_hf.py  visualizer.py
